--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -6,8 +6,7 @@
 
 body {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-suds {
@@ -20,4 +19,44 @@ body {
 
 .bg-suds:hover {
   background-color: rgb(22, 187, 202);
+}
+
+
+.img-overlay {
+  position: relative;
+  width: 100%;
+}
+
+.img-overlay-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgb(22, 187, 202, 0.9);
+}
+
+.img-overlay:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
